testdata/baselines/reference/submodule/conformance/incrementOperatorWithAnyOtherType.errors.txt
incrementOperatorWithAnyOtherType.ts(25,25): error TS18047: 'obj.y' is possibly 'null'.
incrementOperatorWithAnyOtherType.ts(31,24): error TS18047: 'obj.y' is possibly 'null'.


==== incrementOperatorWithAnyOtherType.ts (2 errors) ====
    // ++ operator on any type
    
    var ANY: any;
    var ANY1: any;
    var ANY2: any[] = ["", ""];
    var obj = {x:1,y:null};
    class A {
        public a: any;
    }
    module M {
        export var n: any;
    }
    var objA = new A();
    
    // any type var
    var ResultIsNumber1 = ++ANY;
    var ResultIsNumber2 = ++ANY1;
    
    var ResultIsNumber3 = ANY1++;
    var ResultIsNumber4 = ANY1++;
    
    // expressions
    var ResultIsNumber5 = ++ANY2[0];
    var ResultIsNumber6 = ++obj.x;
    var ResultIsNumber7 = ++obj.y;
                            ~~~~~
!!! error TS18047: 'obj.y' is possibly 'null'.
    var ResultIsNumber8 = ++objA.a;
    var ResultIsNumber = ++M.n;
    
    var ResultIsNumber9 = ANY2[0]++;
    var ResultIsNumber10 = obj.x++;
    var ResultIsNumber11 = obj.y++;
                           ~~~~~
!!! error TS18047: 'obj.y' is possibly 'null'.
    var ResultIsNumber12 = objA.a++;
    var ResultIsNumber13 = M.n++;
    
    // miss assignment opertors
    ++ANY;
    ++ANY1;
    ++ANY2[0];
    ++ANY, ++ANY1;
    ++objA.a;
    ++M.n;
    
    ANY++;
    ANY1++;
    ANY2[0]++;
    ANY++, ANY1++;
    objA.a++;
    M.n++;